apps/monitoring/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http-web
  selector:
    app: grafana
  clusterIP: None
